--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
         <a class="logo" href="./index.html">Web<span class="header-logo">Studio</span></a>
         <nav class="header-nav">
           <ul class="nav-list">
-            <li><a class="nav-link current" href="./index.html">Студія</a></li>
-            <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="nav-link" href="./index.html">Студія</a></li>
+            <li><a class="nav-link current" href="./portfolio.html">Портфоліо</a></li>
             <li><a class="nav-link" href="">Контакти</a></li>
           </ul>
         </nav>
@@ -64,7 +64,16 @@
           <ul class="card-list">
             <li class="card-item">
               <a class="card-link" href="#">
-                <img src="./img/img_tehnokriak.jpg" alt="ноутбук" width="370" height="294" />
+                <div class="card-thumb">
+                  <img src="./img/img_tehnokriak.jpg" alt="ноутбук" width="370" height="294" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="title-descr">
                   <h2 class="card-title">Технокряк</h2>
                   <p class="card-text">Веб-сайт</p>
@@ -72,8 +81,18 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="card-link" href="#">
-                <img src="./img/img_baskball.jpg" alt="постер" width="370" height="294" />
+              <a class="card-link" href="#"
+                ><div class="card-thumb">
+                  <img src="./img/img_baskball.jpg" alt="постер" width="370" height="294" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="title-descr">
                   <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
                   <p class="card-text">Дизайн</p>
@@ -82,7 +101,17 @@
             </li>
             <li class="card-item">
               <a class="card-link" href="#">
-                <img src="./img/img_restoran.jpg" alt="ресторан" width="370" height="294" />
+                <div class="card-thumb">
+                  <img src="./img/img_restoran.jpg" alt="ресторан" width="370" height="294" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="title-descr">
                   <h2 class="card-title">Ресторан Seafood</h2>
                   <p class="card-text">Додаток</p>
@@ -91,7 +120,17 @@
             </li>
             <li class="card-item">
               <a class="card-link" href="#">
-                <img src="./img/img_headsp.jpg" alt="навушники" width="370" height="294" />
+                <div class="card-thumb">
+                  <img src="./img/img_headsp.jpg" alt="навушники" width="370" height="294" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="title-descr">
                   <h2 class="card-title">Проєкт Prime</h2>
                   <p class="card-text">Маркетинг</p>
@@ -100,7 +139,17 @@
             </li>
             <li class="card-item">
               <a class="card-link" href="#">
-                <img src="./img/img_box.jpg" alt="коробки" width="370" height="294" />
+                <div class="card-thumb">
+                  <img src="./img/img_box.jpg" alt="коробки" width="370" height="294" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="title-descr">
                   <h2 class="card-title">Проєкт Boxes</h2>
                   <p class="card-text">Додаток</p>
@@ -109,7 +158,17 @@
             </li>
             <li class="card-item">
               <a class="card-link" href="#">
-                <img src="./img/img_comp.jpg" alt="комп'ютер" width="370" height="294" />
+                <div class="card-thumb">
+                  <img src="./img/img_comp.jpg" alt="комп'ютер" width="370" height="294" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="title-descr">
                   <h2 class="card-title">Inspiration has no Borders</h2>
                   <p class="card-text">Веб-сайт</p>
@@ -118,7 +177,17 @@
             </li>
             <li class="card-item">
               <a class="card-link" href="#">
-                <img src="./img/img_newspaper.jpg" alt="журнал" width="370" height="294" />
+                <div class="card-thumb">
+                  <img src="./img/img_newspaper.jpg" alt="журнал" width="370" height="294" />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="title-descr">
                   <h2 class="card-title">Видання Limited Edition</h2>
                   <p class="card-text">Дизайн</p>
@@ -127,7 +196,22 @@
             </li>
             <li class="card-item">
               <a class="card-link" href="#">
-                <img src="./img/img_labproject.jpg" alt="назва проекту" width="370" height="294" />
+                <div class="card-thumb">
+                  <img
+                    src="./img/img_labproject.jpg"
+                    alt="назва проекту"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="title-descr">
                   <h2 class="card-title">Проєкт LAB</h2>
                   <p class="card-text">Маркетинг</p>
@@ -136,12 +220,22 @@
             </li>
             <li class="card-item">
               <a class="card-link" href="#">
-                <img
-                  src="./img/img_growbus.jpg"
-                  alt="робота за ноутбуком"
-                  width="370"
-                  height="294"
-                />
+                <div class="card-thumb">
+                  <img
+                    src="./img/img_growbus.jpg"
+                    alt="робота за ноутбуком"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="title-descr">
                   <h2 class="card-title">Growing Business</h2>
                   <p class="card-text">Додаток</p>
