--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -57,7 +58,7 @@
             Ефективні рішення для <br />
             вашого бізнесу
           </h1>
-          <button type="button" class="hero-btn">Замовити послугу</button>
+          <button type="button" class="hero-btn" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <section class="section">
@@ -114,11 +115,24 @@
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work-list">
-            <li><img src="./img/img_1.jpg" alt="створення сайта" width="370" height="294" /></li>
-            <li>
-              <img src="./img/img_2.jpg" alt="розробка інтерфейса" width="370" height="294" />
+            <li class="work-item">
+              <img src="./img/img_1.jpg" alt="створення сайта" width="370" height="294" />
+              <div class="work-thumb">
+                <p class="work-text">Десктопні додатки</p>
+              </div>
             </li>
-            <li><img src="./img/img_3.jpg" alt="вебдизайн" width="370" height="294" /></li>
+            <li class="work-item">
+              <img src="./img/img_2.jpg" alt="розробка інтерфейса" width="370" height="294" />
+              <div class="work-thumb">
+                <p class="work-text">Мобільні додатки</p>
+              </div>
+            </li>
+            <li class="work-item">
+              <img src="./img/img_3.jpg" alt="вебдизайн" width="370" height="294" />
+              <div class="work-thumb">
+                <p class="work-text">Дизайнерські рішення</p>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
@@ -373,5 +387,20 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <!-- <button type="button" class="modal-btn">
+          <svg width="18" height="18" class="modal-icon-close">
+            <use href="./img/icons.svg#icon-but-exit"></use>
+          </svg>
+        </button> -->
+        <button type="button" class="modal-btn" data-modal-close>
+          <svg width="18" height="18" class="modal-icon-close">
+            <use href="./img/icons.svg#icon-but-exit"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
